fix: align the timer with the switch button, fetch status cleanup

--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,6 @@ body {
 		max-width: 500px;
 		max-height: 800px;
 	}
-
 }
 
 /* Dropdown styles */
@@ -87,13 +86,13 @@ body {
 	margin-top: 10px;
 	margin-bottom: 10px;
 	transform: scaleX(1.25) scaleY(1.25);
-	padding-left: 39px;
+	padding-left: 3px;
 }
 
 /* Media query for screens larger than 768px */
 @media (min-width: 768px) {
 	.switch {
-		padding-left: 50px;
+		padding-left: 5px;
 	}
 }
 
